# bpmner-smoke-history

./: .gitignore  .sqlfluff  ABOUT.md  README.md  SMOKE_HEALTH.md  floors.toml  hk.pkl  mise.toml  pyproject.toml
.github/workflows/: ci.yml  ingest.yml  pr-title.yml
.greptile/: config.json
.mise/tasks/: validate-ingest.sh  xml-format.py
data/year=2026/month=06/: run-27071825113.jsonl  run-27075010794.jsonl  run-27076301827.jsonl  run-27097386462.jsonl  run-27100118301.jsonl  run-27107642311.jsonl  run-27131919473.jsonl  run-27133376499.jsonl  run-27149559976.jsonl  run-27151938981.jsonl  run-27153749546.jsonl  run-27154994841.jsonl  run-27173723278.jsonl  run-27174446787.jsonl  run-27175063969.jsonl  run-27175757458.jsonl  run-27176005435.jsonl  run-27237885074.jsonl  run-27239719442.jsonl  run-27241073326.jsonl  run-27241747041.jsonl  run-27304094958.jsonl  run-27411556178.jsonl  run-27412682497.jsonl  run-27434092480.jsonl  run-27439004208.jsonl  run-27468273696.jsonl  run-27468748512.jsonl  run-27499128981.jsonl  run-27499652631.jsonl  run-27500682223.jsonl  run-27510405855.jsonl  run-27514577797.jsonl  run-27562366017.jsonl  run-27565286172.jsonl  run-27572546331.jsonl  (+56 more)
queries/: cost_timeseries.sql  failure_categories.sql  fingerprint_impact.sql  flaky.sql  latency_timeseries.sql  llm_call_distribution.sql  scorecard.sql  stage_split.sql
smoke_history/: __init__.py  charts.py  consolidate.py  render_dashboard.py
tasks/: validate-dispatch
tests/: test_charts.py  test_consolidate.py  test_render.py
tests/testdata/: run-101.jsonl  run-102.jsonl
(+9 files in other folders)
