# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

[project]
name = "smoke-history"
version = "0.1.0"
description = "Analysis tooling for bpmner live-LLM smoke-test history"
requires-python = ">=3.11"
dependencies = ["duckdb>=1.0"]

[dependency-groups]
dev = ["ruff>=0.6", "sqlfluff>=3.0", "pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]
