# Copyright 2026 The Project Contributors
# SPDX-License-Identifier: MIT

[project]
name = "smoke-history"
version = "0.1.0"
description = "Analysis tooling for bpmner live-LLM smoke-test history"
requires-python = ">=3.14"
dependencies = ["duckdb>=1.0"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py313"
# mise file tasks carry #MISE / #USAGE directives that ruff would reformat (it wants `# MISE`),
# breaking mise's parsing. The Builtin runs `ruff --force-exclude`, so this is honored.
extend-exclude = [".mise/tasks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "W"]
